# PoseLib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.python  LICENSE  README.md  TODO.md  build_linux.sh  build_ninja.sh  build_win.sh  pyproject.toml  setup.py  test_cov.py  test_pnpf.py
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: build-pypi.yaml  cmake-single-platform.yml  main.yaml  main.yml  wheels.yml
PoseLib/: .clang-format  CMakeLists.txt  alignment.h  camera_pose.h  decompositions.cc  decompositions.h  gen_relpose_5p1pt.cc  gen_relpose_5p1pt.h  gen_relpose_6pt.cc  gen_relpose_6pt.h  gen_relpose_upright_4pt.cc  gen_relpose_upright_4pt.h  gp3p.cc  gp3p.h  gp4ps.cc  gp4ps.h  homography_4pt.cc  homography_4pt.h  p1p2ll.cc  p1p2ll.h  p2p1ll.cc  p2p1ll.h  p2p2l.cc  p2p2l.h  p2p2pl.cc  p2p2pl.h  p3ll.cc  p3ll.h  p3p.cc  p3p.h  p4pf.cc  p4pf.h  p5lp_radial.cc  p5lp_radial.h  p6lp.cc  p6lp.h  poselib.h  poselib.h.in  qep.cc  re3q3.cc  (+41 more)
PoseLib/misc/: camera_models.cc  camera_models.h  colmap_models.cc  colmap_models.h  constants.h  danilevsky.h  decompositions.cc  decompositions.h  essential.cc  essential.h  gj.cc  gj.h  hidden6.h  qep.cc  qep.h  quaternion.cc  quaternion.h  radial.cc  radial.h  re3q3.cc  re3q3.h  roots.cc  roots.h  sturm.h  sturm_hartley.h  univariate.cc  univariate.h  utils.cpp  utils.h
PoseLib/robust/: base_estimator.h  base_hybrid_estimator.h  bundle.cc  bundle.h  colmap_models.cc  colmap_models.h  hybrid_ransac.cc  hybrid_ransac.h  hybrid_ransac_impl.h  jacobian_impl.h  jacobian_simd.cc  jacobian_simd.h  lm_impl.h  ransac.cc  ransac.h  ransac_impl.h  recalibrator.cc  recalibrator.h  robust.cc  robust.h  robust_loss.cc  robust_loss.h  sampling.cc  sampling.h  types.h  utils.cc  utils.h
PoseLib/robust/estimators/: absolute_pose.cc  absolute_pose.h  base_estimator.h  homography.cc  homography.h  hybrid_pose.cc  hybrid_pose.h  relative_pose.cc  relative_pose.h
PoseLib/robust/hybrid_estimators/: hybrid_absolute_pose.cc  hybrid_absolute_pose.h  hybrid_point_line_absolute_pose.cc  hybrid_point_line_absolute_pose.h
PoseLib/robust/optim/: absolute.h  fundamental.h  generalized_absolute.h  generalized_relative.h  homography.h  hybrid.h  jacobian_accumulator.h  lm_impl.cc  lm_impl.h  monodepth_relpose.h  optim_utils.h  refiner_base.h  relative.h
PoseLib/solvers/: gen_relpose_5p1pt.cc  gen_relpose_5p1pt.h  gen_relpose_6pt.cc  gen_relpose_6pt.h  gen_relpose_6pt_42.cc  gen_relpose_6pt_42.h  gen_relpose_6pt_42_c0.inc  gen_relpose_6pt_42_c1.inc  gen_relpose_6pt_51.cc  gen_relpose_6pt_51.h  gen_relpose_upright_4pt.cc  gen_relpose_upright_4pt.h  gp3p.cc  gp3p.h  gp4ps.cc  gp4ps.h  homography_4pt.cc  homography_4pt.h  homography_fitzgibbon_cvpr_2001.cc  homography_fitzgibbon_cvpr_2001.h  homography_kukelova_cvpr_2015.cc  homography_kukelova_cvpr_2015.h  homography_valtonenornhag_icpr_2020.cc  homography_valtonenornhag_icpr_2020.h  homography_valtonenornhag_wacv_2021_fHf.cc  homography_valtonenornhag_wacv_2021_fHf.h  homography_valtonenornhag_wacv_2021_frHfr.cc  homography_valtonenornhag_wacv_2021_frHfr.h  p1p2ll.cc  p1p2ll.h  p1p3llf.cc  p1p3llf.h  p2p1ll.cc  p2p1ll.h  p2p2llf.cc  p2p2llf.h  p2p2pl.cc  p2p2pl.h  p35pf.cc  p35pf.h  (+71 more)
benchmark/: CMakeLists.txt  benchmark.cc  benchmark.h  problem_generator.cc  problem_generator.h  solver_benchmark.cc  solver_benchmark.h
cmake/: CMakeRegistry.cmake  Config.cmake.in  ConfigVersion.cmake.in  Hunter.cmake  InstallConfig.cmake  LibraryConfig.cmake  SetEnv.cmake  Uninstall.cmake.in
pybind/: CMakeLists.txt  README.md  generate_stubs.py  generate_stubs.sh  helpers.h  make_install_pip_package.cmake  pybind11_extension.h  pyposelib.cc  pyposelib.cpp  setup.py.in
pybind/bindings/: solvers.cc  types.cc
pybind/bindings/estimators/: absolute_pose.cc  homography.cc  hybrid_pose.cc  relative_pose.cc
pybind11/: CMakeLists.txt  INSTALL.md  README.md  pyposelib.cpp  setup.py  setup.py.in
pyposelib/: __init__.py  utils.py
scripts/: build_linux.sh  build_ninja.sh  build_python_package.sh  build_win.sh  clang_format.sh  ruff_format.sh
tests/: CMakeLists.txt  camera_models_test.cc  camera_models_tests.cc  example_cameras.h  hybrid_ransac_test.cc  optim_absolute_test.cc  optim_fundamental_test.cc  optim_gen_absolute_test.cc  optim_gen_relative_test.cc  optim_homography_test.cc  optim_monodepth_relpose_test.cc  optim_relative_test.cc  optim_test_utils.h  ransac_test.cc  recalibrator_test.cc  run_tests.cc  structureless_resection_test.cc  test.h  test_poselib.py  test_radtanthinprismfisheye.py  test_rng.h
