[build-system]
requires = ["setuptools>=68", "wheel>=0.38", "pybind11==3.0.1", "pybind11-stubgen", "ruff", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "poselib"
dynamic = ["version"]
description = "RANSAC + collection of minimal solvers for camera pose estimation."
authors = [
    {name = "Viktor Larsson and contributors", email = "viktor.larsson@math.lth.se"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
]

[tool.cibuildwheel]
test-extras = ["test"]
test-command = "pip install 'posebench @ https://github.com/PoseLib/posebench/archive/5386cd654b53bb435b8038b31e296594ba89e2e1.tar.gz' && pytest -s -v {project}/tests"
test-skip = "cp314*-*"

[tool.setuptools]
license-files = ["LICENSE"]
